--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -76,15 +76,32 @@
       cursor: not-allowed;
       opacity: 0.6;
     }
+    /* Estilo do botão Voltar */
+    #backButton {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 8px 16px;
+      font-size: 18px;
+      cursor: pointer;
+      background-color: #fff;
+      color: #000;
+      border: none;
+      border-radius: 5px;
+      z-index: 1000;
+    }
+    #backButton:hover {
+      background-color: #ccc;
+    }
   </style>
 </head>
 <body>
+  <button id="backButton" onclick="window.location.href = '../'">Voltar</button>
   <canvas id="gameCanvas" width="900" height="900"></canvas>
   <div id="ranking">
     <h2>Ranking</h2>
     <ol id="rankingList"></ol>
   </div>
-
   <div id="startScreen">
     <h1>LazerRunner</h1>
     <button id="playButton">Play</button>
@@ -95,7 +112,6 @@
     <button id="restartButton">Restart</button>
     <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
-
   <div id="footer">
     Mover: Setas ou WASD<br />
     Imunidade: Barra de espaço<br />
@@ -104,15 +120,14 @@
   <div id="version">Versão 1.3</div>
 
   <script>
-    document.addEventListener('contextmenu', (e) => {
+    document.addEventListener('contextmenu', e => {
       e.preventDefault();
-      alert('O clique com o botão direito está desativado para proteger o jogo.');
+      alert('Clique com o botão direito desativado.');
     });
-
-    document.addEventListener('keydown', (e) => {
+    document.addEventListener('keydown', e => {
       if (e.key === 'F12' || e.keyCode === 123) {
         e.preventDefault();
-        alert('As ferramentas de desenvolvedor estão desativadas para proteger o jogo.');
+        alert('Ferramentas de desenvolvedor desativadas.');
       }
     });
 
@@ -127,14 +142,11 @@
 
     let gameStarted = false;
     let scoreSaved = false;
-
     const boundary = {
-      x: 70,
-      y: 70,
+      x: 70, y: 70,
       width: canvas.width - 140,
       height: canvas.height - 140
     };
-
     const player = {
       x: canvas.width / 2,
       y: canvas.height / 2,
@@ -146,67 +158,54 @@
       immuneCooldown: 2000,
       lastImmuneEnd: 0
     };
-
     let bars = [];
     let score = 0;
     let gameOver = false;
-
     let keys = {
-      ArrowUp: false,
-      ArrowDown: false,
-      ArrowLeft: false,
-      ArrowRight: false,
-      'w': false, 'W': false,
-      's': false, 'S': false,
-      'a': false, 'A': false,
-      'd': false, 'D': false,
-      ' ': false,
-      'Enter': false
+      ArrowUp:false, ArrowDown:false,
+      ArrowLeft:false, ArrowRight:false,
+      w:false, W:false,
+      s:false, S:false,
+      a:false, A:false,
+      d:false, D:false,
+      ' ':false, Enter:false
     };
-
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
     function saveRanking() {
       try {
         localStorage.setItem('rankings', JSON.stringify(rankings));
-        console.log('Ranking salvo no localStorage:', rankings);
       } catch (e) {
-        console.error('Erro ao salvar ranking:', e);
-        alert('Erro ao salvar a pontuação. Tente novamente.');
+        alert('Erro ao salvar a pontuação.');
       }
     }
 
     function updateRanking() {
-      const rankingList = document.getElementById('rankingList');
-      rankingList.innerHTML = '';
-      rankings.sort((a, b) => b.score - a.score);
-      rankings.slice(0, 10).forEach(entry => {
+      const list = document.getElementById('rankingList');
+      list.innerHTML = '';
+      rankings.sort((a, b) => b.score - a.score)
+              .slice(0,10)
+              .forEach(e => {
         const li = document.createElement('li');
-        li.textContent = `${entry.name} - ${entry.score}`;
-        rankingList.appendChild(li);
+        li.textContent = `${e.name} - ${e.score}`;
+        list.appendChild(li);
       });
-      console.log('Ranking atualizado na interface:', rankings);
     }
 
-    document.addEventListener('keydown', (e) => {
+    document.addEventListener('keydown', e => {
       if (e.key in keys) {
         keys[e.key] = true;
-
         if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
           player.immune = true;
           player.immuneTime = Date.now();
         }
-
         if (e.key === 'Enter' && gameOver) {
           resetGame();
         }
       }
     });
-
-    document.addEventListener('keyup', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = false;
-      }
+    document.addEventListener('keyup', e => {
+      if (e.key in keys) keys[e.key] = false;
     });
 
     playButton.addEventListener('click', () => {
@@ -214,39 +213,27 @@
       gameStarted = true;
       resetGame();
     });
-
     restartButton.addEventListener('click', () => {
       gameOverScreen.classList.add('hidden');
       resetGame();
     });
-
     saveRankingButton.addEventListener('click', () => {
-      if (scoreSaved) {
-        console.log('Pontuação já salva, ignorando clique.');
-        return;
-      }
-      const name = prompt('Digite seu nome para salvar sua pontuação:');
+      if (scoreSaved) return;
+      const name = prompt('Digite seu nome:');
       if (name && name.trim()) {
-        const trimmedName = name.trim();
-        rankings.push({ name: trimmedName, score });
+        rankings.push({ name: name.trim(), score });
         saveRanking();
         updateRanking();
         scoreSaved = true;
         saveRankingButton.disabled = true;
         saveRankingButton.textContent = 'Salvo';
-        alert('Pontuação salva com sucesso!');
-        console.log('Pontuação salva:', { name: trimmedName, score });
-      } else if (name !== null) {
-        alert('Por favor, insira um nome válido (não vazio).');
-        console.log('Nome inválido inserido:', name);
-      } else {
-        console.log('Prompt cancelado pelo usuário.');
-      }
+        alert('Pontuação salva!');
+      } else if (name !== null) alert('Nome inválido.');
     });
 
     function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
+      player.x = canvas.width/2;
+      player.y = canvas.height/2;
       player.immune = false;
       score = 0;
       bars = [];
@@ -256,75 +243,52 @@
       saveRankingButton.textContent = 'Salvar no Ranking';
       lastTime = 0;
       gameOverScreen.classList.add('hidden');
-      console.log('Jogo reiniciado, botão de ranking reativado.');
       requestAnimationFrame(gameLoop);
     }
 
     function createBar() {
-      const direction = Math.floor(Math.random() * 4);
+      const dir = Math.floor(Math.random()*4);
       const thickness = 30;
-      const length = Math.random() * 400 + 200;
-      const speed = 2.0 + Math.random() * 1.8;
-
-      let bar = {};
-
-      switch (direction) {
-        case 0:
-          bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 };
-          break;
-        case 1:
-          bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 };
-          break;
-        case 2:
-          bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed };
-          break;
-        case 3:
-          bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed };
-          break;
+      const length = Math.random()*400 + 200;
+      const speed = 2 + Math.random()*1.8;
+      let bar;
+      switch (dir) {
+        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
+        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
+        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
+        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
       }
-
       bars.push(bar);
     }
 
     function movePlayer(dt) {
-      let dx = 0;
-      let dy = 0;
-
-      if (keys.ArrowUp || keys.w || keys.W) dy -= 1;
-      if (keys.ArrowDown || keys.s || keys.S) dy += 1;
-      if (keys.ArrowLeft || keys.a || keys.A) dx -= 1;
-      if (keys.ArrowRight || keys.d || keys.D) dx += 1;
-
-      if (dx !== 0 || dy !== 0) {
-        const len = Math.hypot(dx, dy);
-        dx = (dx / len) * player.speed;
-        dy = (dy / len) * player.speed;
-
-        player.x += dx;
-        player.y += dy;
-
-        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
-        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
+      let dx = 0, dy = 0;
+      if (keys.ArrowUp||keys.w) dy--;
+      if (keys.ArrowDown||keys.s) dy++;
+      if (keys.ArrowLeft||keys.a) dx--;
+      if (keys.ArrowRight||keys.d) dx++;
+      if (dx||dy) {
+        const len = Math.hypot(dx,dy);
+        player.x += dx/len * player.speed;
+        player.y += dy/len * player.speed;
+        player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
+        player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
       }
     }
 
     function moveBars(dt) {
-      bars.forEach(bar => {
-        bar.x += bar.dx * dt;
-        bar.y += bar.dy * dt;
-      });
+      bars.forEach(b => { b.x += b.dx*dt; b.y += b.dy*dt; });
     }
 
     function checkCollisions() {
       if (player.immune) return;
-      for (let bar of bars) {
-        if (
-          player.x + player.radius > bar.x &&
-          player.x - player.radius < bar.x + bar.width &&
-          player.y + player.radius > bar.y &&
-          player.y - player.radius < bar.y + bar.height
-        ) {
+      for (const b of bars) {
+        if (player.x+player.radius > b.x &&
+            player.x-player.radius < b.x+b.width &&
+            player.y+player.radius > b.y &&
+            player.y-player.radius < b.y+b.height) {
           gameOver = true;
+          break;
         }
       }
     }
@@ -337,13 +301,11 @@
     }
 
     function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
+      ctx.clearRect(0,0,canvas.width,canvas.height);
       if (!gameStarted) return;
-
       ctx.strokeStyle = 'white';
       ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
+      ctx.strokeRect(boundary.x,boundary.y,boundary.width,boundary.height);
 
       const now = Date.now();
       const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
@@ -351,38 +313,31 @@
       const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
 
       ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-      if (player.immune) {
-        ctx.fillStyle = 'yellow';
-      } else if (inCooldown) {
-        ctx.fillStyle = '#444';
-      } else {
-        ctx.fillStyle = 'white';
-      }
+      ctx.arc(player.x,player.y,player.radius,0,2*Math.PI);
+      ctx.fillStyle = player.immune ? 'yellow' : inCooldown ? '#444' : 'white';
       ctx.fill();
-
       if (player.immune) {
         ctx.beginPath();
-        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
+        ctx.arc(player.x,player.y,player.radius+10,0,2*Math.PI);
         ctx.strokeStyle = 'yellow';
         ctx.lineWidth = 3;
         ctx.stroke();
       }
 
       ctx.fillStyle = 'red';
-      bars.forEach(bar => {
-        ctx.fillRect(bar.x, bar.y, bar.width, bar.height);
-      });
+      bars.forEach(b => ctx.fillRect(b.x,b.y,b.width,b.height));
 
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
       ctx.textAlign = 'left';
       ctx.fillText(`Pontuação: ${score}`, 10, 30);
+
       ctx.fillStyle = 'yellow';
       ctx.font = '18px Arial';
-      ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, 180, 28);
+      ctx.fillText(`Imunidade: ${(immunityRemaining/1000).toFixed(1)}s`, 180, 28);
+
       ctx.fillStyle = inCooldown ? 'gray' : 'green';
-      ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, 340, 28);
+      ctx.fillText(`Recarga: ${(cooldownRemaining/1000).toFixed(1)}s`, 340,28);
 
       if (gameOver) {
         finalScoreText.textContent = `Pontuação Final: ${score}`;
@@ -391,47 +346,23 @@
     }
 
     let lastTime = 0;
-    let lastFrame = 0;
-
-    function gameLoop(timestamp) {
+    function gameLoop(ts) {
       if (!gameStarted || gameOver) {
-        draw();
-        return;
+        draw(); return;
       }
+      const dt = (ts - lastTime) / 16.67;
+      lastTime = ts;
 
-      const dt = (timestamp - lastFrame) / 16.67;
-      lastFrame = timestamp;
+      let barInterval, numBars;
+      if (score <= 10) { barInterval = 4000; numBars = 2; }
+      else if (score <= 25) { barInterval = 3000; numBars = 2; }
+      else if (score <= 35) { barInterval = 4000; numBars = 3; }
+      else if (score <= 45) { barInterval = 3800; numBars = 3; }
+      else if (score <= 55) { barInterval = 4000; numBars = 4; }
+      else { barInterval = 3500; numBars = 3; }
 
-      let barInterval;
-      let numBars;
-
-      // Define intervalo e número de barras com base na pontuação
-      if (score <= 10) {
-        barInterval = 4000; // 4 segundos
-        numBars = 2;
-      } else if (score <= 25) {
-        barInterval = 3000; // 3 segundos
-        numBars = 2;
-      } else if (score <= 35) {
-        barInterval = 4000; // 4 segundos
-        numBars = 3;
-      } else if (score <= 45) {
-        barInterval = 3800; // 3,8 segundos
-        numBars = 3;
-      } else if (score <= 55) {
-        barInterval = 4000; // 4 segundos
-        numBars = 4;
-      } else {
-        barInterval = 3500; // 3,5 segundos
-        numBars = 3;
-      }
-
-      // Gera barras conforme o intervalo e número definido
-      if (timestamp - lastTime > barInterval) {
-        for (let i = 0; i < numBars; i++) {
-          createBar();
-        }
-        lastTime = timestamp;
+      if (ts - lastTime > barInterval) {
+        for (let i=0; i<numBars; i++) createBar();
         score++;
       }
 
@@ -445,7 +376,7 @@
     }
 
     updateRanking();
-    requestAnimationFrame(gameLoop);
+    requestAnimationFrame(ts => { lastTime=ts; gameLoop(ts); });
   </script>
 </body>
 </html>
