--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -8,7 +8,7 @@
         body {
             background-color: black;
             text-decoration: none;
-            color: solid white;
+            color: white;
         }
         #botaodejogo {
             padding: 5px;
@@ -17,7 +17,7 @@
         #botaodejogo a {
             border: 2px white solid;
             text-decoration: none;
-            color: solid white;
+            color: white;
         }
 
     </style>
