--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -28,6 +28,7 @@
         #Voltar a {
             text-decoration: none;
             color: white;
+            margin-left: 100%;
         }
 
     </style>
